crates/strider-analyze/tests/snapshots/x64__control__early_return.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v9" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v9" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "11" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v12" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "11" -> "v12" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "11" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v9" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "14" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v12" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "17" -> "14" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "19" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "20" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "21" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="φ RAX", shape=house, fillcolor="#163030"];
  "5" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0xfffffffa:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "28" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v8" -> "28" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "29" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "28" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0xffffffff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "29" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "18" -> "29" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "19" -> "29" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "10" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="arg[0] ← EDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
